<resources>

    <string name="app_name">Skurt</string>
    <string name="action_settings">Settings</string>

       <!-- HomePage-->

    <string name="delivery_location">DELIVERY LOCATION</string>
    <string name="need_a_rental_car">Where do you need a rental car?</string>
    <string name="start">START</string>
    <string name="end">END</string>
    <string name="tap_to_select">Tap to select</string>
    <string name="select_location">Select Location</string>


    <!-- End HomePage-->

</resources>
